   audio and video codecs, e.g., Set(SIP_CODEC=ulaw,h264)

 * The 'callevents' parameter has been removed. Hold AMI events are now raised
   in the core, and can be filtered out using the 'eventfilter' parameter
   in manager.conf.

 * Added 'ignore_requested_pref'. When enabled, this will use the preferred
   codecs configured for a peer instead of the requested codec.

chan_skinny
------------------
 * Added the 'immeddialkey' parameter. If set, when the user presses the
   configured key the already entered number will be immediately dialed. This
   is useful when the dialplan allows for variable length pattern matching.
   Valid options are '*' and '#'.

 * Added the 'callfwdtimeout' parameter. This configures the amount of time (in
   milliseconds) before a call forward is considered to not be answered.

 * The 'serviceurl' parameter allows Service URLs to be attached to line
   buttons.


Functions
------------------

AGENT
------------------
 * The password option has been disabled, as the AgentLogin application no
   longer provides authentication.

AUDIOHOOK_INHERIT
------------------
 * Due to changes in the Asterisk core, this function is no longer needed to
   preserve a MixMonitor on a channel during transfer operations and dialplan
   execution. It is effectively obsolete.

CDR (function)
------------------
 * The 'amaflags' and 'accountcode' attributes for the CDR function are
   deprecated. Use the CHANNEL function instead to access these attributes.

 * The 'l' option has been removed. When reading a CDR attribute, the most
   recent record is always used. When writing a CDR attribute, all non-finalized
   CDRs are updated.

 * The 'r' option has been removed, for the same reason as the 'l' option.

 * The 's' option has been removed, as LOCKED semantics no longer exist in the
   CDR engine.

CDR_PROP
------------------
 * A new function CDR_PROP has been added. This function lets you set properties